issue resolved. also, img in about taken out on mobile

--- a/frontend/src/components/About/index.css
+++ b/frontend/src/components/About/index.css
@@ -63,7 +63,7 @@
     }
     
     #about-page img {
-        height: 100px;
+     display: none;
     }
     
     #about-page #message h2{
